--- a/src/components/HomeModal/HomeModal.module.css
+++ b/src/components/HomeModal/HomeModal.module.css
@@ -17,7 +17,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    background: #E5E5E5;
+    background: rgb(255, 255, 255);
     position: fixed;
     top: 0;
     right: 0;
@@ -43,34 +43,36 @@
    margin: 0 auto;
    padding-top: 72px;
     
-    height: 400px;
     width: 89%;
 
-    font-size: 44px;
+    
     font-family: 'Podkova';
     list-style: none;
+    overflow: scroll;
 }
 .directionName {
-    font-size: 44px;
+    font-size: 38px;
 }
-
 
 .navItem:nth-child(1)>a {
-    color: #503E9D;
+    color: #F7C02F;
 }
 .navItem:nth-child(2)>a {
-    color: #FF8600;
+    color: #503E9D;
 }
 .navItem:nth-child(3)>a {
-    color: #E04141;
+    color: #FF8600;
 }
 .navItem:nth-child(4)>a {
-    color: #448B74;
+    color: #E04141;
 }
 .navItem:nth-child(5)>a {
-    color: #3140C4;
+    color: #448B74;
 }
 .navItem:nth-child(6)>a {
+    color: #3140C4;
+}
+.navItem:nth-child(7)>a {
     color: #FB6D3A;
 }
 
